--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             color: #EAE4D5;
             padding: 20px;
             line-height: 14px;
+            letter-spacing: 1px;
         }
         #console {
             width: 100%;
